--- a/css/all.css
+++ b/css/all.css
@@ -27,7 +27,6 @@ a {
   background: url("https://www.adobe.com/tw/express/create/media_178d2b8f8be7a46a31b644514960fd9af29039251.png?width=1200&format=pjpg&optimize=medium") no-repeat;
   background-size: cover;
   height: 450px;
-  display: fixed;
 }
 
 .banner .title-mask {
@@ -36,5 +35,10 @@ a {
   top: 50%;
   transform: translateY(-50%);
   background: rgba(255, 255, 255, 0.2);
+}
+
+.content-list img {
+  width: 150px;
+  border-radius: 50%;
 }
 /*# sourceMappingURL=all.css.map */
