--- a/scss/page/_index.scss
+++ b/scss/page/_index.scss
@@ -2,12 +2,18 @@
     background:url('https://www.adobe.com/tw/express/create/media_178d2b8f8be7a46a31b644514960fd9af29039251.png?width=1200&format=pjpg&optimize=medium') no-repeat;
     background-size: cover;
     height: 450px;
-    display: fixed;
     .title-mask{
         width: 50%;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         background:rgba(255,255,255,.2)
+    }
+}
+
+.content-list{
+    img{
+        width: 150px;
+        border-radius: 50%;
     }
 }
